Fix About menu being too wide

--- a/styles.css
+++ b/styles.css
@@ -634,7 +634,6 @@ ol.section-listing {
 	column-gap: 36px;
 	font-family: 'Noto Sans', Arial, Helvetica, sans-serif;
 	font-size: 1rem;
-	width: 150%;
 	margin-left: -25%;
 	border-top: 1px #e0e0e0 solid;
 	border-bottom: 1px #e0e0e0 solid;
